// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer in a JIPT context renders \`crwdn\` placeholders with data-perseus-component-index and data-perseus-paragraph-index attributes in an article: article with JIPT placeholders 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      data-perseus-component-index="42"
      data-perseus-paragraph-index="0"
    >
      crwdns1:0crwdne1
    </div>
    <div
      data-perseus-component-index="42"
      data-perseus-paragraph-index="1"
    >
      crwdns2:0crwdne2
    </div>
  </div>
</div>
`;

exports[`renderer in a JIPT context renders \`crwdn\` placeholders with data-perseus-component-index attributes in an exercise: exercise with JIPT placeholder 1`] = `
<div>
  <div
    data-perseus-component-index="42"
  >
    crwdns123:0crwdne123
  </div>
</div>
`;

exports[`renderer in a JIPT context replaces the \`crwdn\` placeholder with the translated content of an article: JIPT-translated article 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      data-perseus-component-index="42"
      data-perseus-paragraph-index="0"
    >
      <p>
        first paragraph
      </p>
    </div>
    <div
      data-perseus-component-index="42"
      data-perseus-paragraph-index="1"
    >
      <p>
        second paragraph
      </p>
    </div>
  </div>
</div>
`;

exports[`renderer in a JIPT context replaces the \`crwdn\` placeholder with the translated content of an exercise: JIPT-translated exercise 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      data-perseus-component-index="42"
      data-perseus-paragraph-index="0"
    >
      <p>
        <a
          href="https://khanacademy.org"
          target="_blank"
        >
          link
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render a table when isMobile: false 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <table>
      <thead>
        <tr>
          <th
            scope="col"
          >
            Heading 1
          </th>
          <th
            scope="col"
          >
            Heading 2
          </th>
          <th
            scope="col"
          >
            Heading 3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            r1c1
          </td>
          <td>
            r1c2
          </td>
          <td>
            r1c3
          </td>
        </tr>
        <tr>
          <td>
            r2c1
          </td>
          <td>
            r2c2
          </td>
          <td>
            r2c3
          </td>
        </tr>
        <tr>
          <td>
            r3c1
          </td>
          <td>
            r3c2
          </td>
          <td>
            r3c3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renderer rendering should render a table when isMobile: true 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      style="margin-left: -16px; margin-right: -16px;"
    >
      <div
        style="padding-left: 0px; padding-right: 0px; transform: translate3d(0,0,0); overflow-x: auto;"
      >
        <span
          style="display: block; width: 100%; transform: scale(1, 1)  translate(0, 8px); transform-origin: 0 0; opacity: 0;"
        >
          <table
            tabindex="0"
          >
            <thead>
              <tr>
                <th
                  scope="col"
                >
                  Heading 1
                </th>
                <th
                  scope="col"
                >
                  Heading 2
                </th>
                <th
                  scope="col"
                >
                  Heading 3
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  r1c1
                </td>
                <td>
                  r1c2
                </td>
                <td>
                  r1c3
                </td>
              </tr>
              <tr>
                <td>
                  r2c1
                </td>
                <td>
                  r2c2
                </td>
                <td>
                  r2c3
                </td>
              </tr>
              <tr>
                <td>
                  r3c1
                </td>
                <td>
                  r3c2
                </td>
                <td>
                  r3c3
                </td>
              </tr>
            </tbody>
          </table>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render block math 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <p>
      This is some block math
    </p>
    <div
      class="perseus-paragraph-centered"
    >
      <div
        class="perseus-block-math"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
        >
          <span
            class="mock-TeX"
          >
            1 + 2
          </span>
        </div>
      </div>
    </div>
    <p>
      And a footer.
    </p>
  </div>
</div>
`;

exports[`renderer rendering should render block math on mobile 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <p>
      This is some block math
    </p>
    <div
      class="perseus-paragraph-centered"
    >
      <div
        class="perseus-block-math"
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; margin-top: -10px; margin-bottom: -10px; transform: translate3d(0,0,0); padding: 10px 16px 10px 16px;"
        >
          <span
            style="display: block; width: 100%; transform: scale(1, 1); transform-origin: 0 0; opacity: 1;"
          >
            <span
              class="mock-TeX"
            >
              1 + 2
            </span>
          </span>
        </div>
      </div>
    </div>
    <p>
      And a footer.
    </p>
  </div>
</div>
`;

exports[`renderer rendering should render columns 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive perseus-renderer-two-columns"
  >
    <div
      class="perseus-two-columns"
    >
      <div
        class="perseus-column"
      >
        <div
          class="perseus-column-content"
        >
          <p>
            Stuff in column 1
          </p>
        </div>
      </div>
      <div
        class="perseus-column"
      >
        <div
          class="perseus-column-content"
        >
          <p>
            Stuff in column 2
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render the math 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <p>
      This is some inline math: 
      <span
        style="white-space: nowrap;"
      >
        <span />
        <span
          class="mock-TeX"
        >
          1 + 2
        </span>
        <span />
      </span>
    </p>
  </div>
</div>
`;

exports[`renderer snapshots correct answer: correct answer 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    The total number of boxes the forklift can carry is 
    <span
      class="perseus-widget-container widget-inline-block"
    >
      <div
        style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px;"
      >
        <label
          for=":r3:"
          style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
        >
          Test visible label
        </label>
        <div
          class="perseus-dropdown"
          style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; width: fit-content; max-inline-size: 100%;"
        >
          <button
            aria-controls=":r4:"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-label="Test ARIA label"
            aria-required="false"
            data-style-active="box-shadow: 0 0 0 var(--wb-border-width-thin) var(--wb-semanticColor-input-default-border);"
            data-style-focus="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-active="box-shadow: 0 0 0 var(--wb-border-width-thin) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-moz-focus-inner="border: 0px;"
            id=":r3:"
            role="combobox"
            style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: space-between; color: var(--wb-semanticColor-input-default-foreground); height: 40px; padding-inline-start: var(--wb-c-dropdown-opener-layout-padding-inlineStart); padding-inline-end: var(--wb-c-dropdown-opener-layout-padding-inlineEnd); border-width: 0px; border-radius: var(--wb-c-dropdown-opener-border-radius-rest); border-style: solid; outline: none; text-decoration: none; box-sizing: border-box; white-space: nowrap; touch-action: manipulation; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); cursor: pointer;"
            type="button"
          >
            <span
              style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-medium); line-height: var(--wb-font-body-lineHeight-medium); margin-inline-end: var(--wb-sizing-size_080); white-space: nowrap; user-select: none; overflow: hidden; text-overflow: ellipsis;"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                less than or equal to
              </div>
            </span>
            <span
              aria-hidden="true"
              style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); min-inline-size: var(--wb-sizing-size_160); background-color: var(--wb-semanticColor-core-foreground-neutral-default); mask-image: url(caret-down-bold.svg);"
            />
          </button>
        </div>
      </div>
    </span>
     
    <span
      style="white-space: nowrap;"
    >
      <span />
      <span
        class="mock-TeX"
      >
        60
      </span>
      <span />
    </span>
    .
  </div>
</div>
`;

exports[`renderer snapshots incorrect answer: incorrect answer 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    The total number of boxes the forklift can carry is 
    <span
      class="perseus-widget-container widget-inline-block"
    >
      <div
        style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px;"
      >
        <label
          for=":r6:"
          style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
        >
          Test visible label
        </label>
        <div
          class="perseus-dropdown"
          style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; width: fit-content; max-inline-size: 100%;"
        >
          <button
            aria-controls=":r7:"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-label="Test ARIA label"
            aria-required="false"
            data-style-active="box-shadow: 0 0 0 var(--wb-border-width-thin) var(--wb-semanticColor-input-default-border);"
            data-style-focus="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-active="box-shadow: 0 0 0 var(--wb-border-width-thin) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-moz-focus-inner="border: 0px;"
            id=":r6:"
            role="combobox"
            style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: space-between; color: var(--wb-semanticColor-input-default-foreground); height: 40px; padding-inline-start: var(--wb-c-dropdown-opener-layout-padding-inlineStart); padding-inline-end: var(--wb-c-dropdown-opener-layout-padding-inlineEnd); border-width: 0px; border-radius: var(--wb-c-dropdown-opener-border-radius-rest); border-style: solid; outline: none; text-decoration: none; box-sizing: border-box; white-space: nowrap; touch-action: manipulation; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); cursor: pointer;"
            type="button"
          >
            <span
              style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-medium); line-height: var(--wb-font-body-lineHeight-medium); margin-inline-end: var(--wb-sizing-size_080); white-space: nowrap; user-select: none; overflow: hidden; text-overflow: ellipsis;"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                greater than or equal to
              </div>
            </span>
            <span
              aria-hidden="true"
              style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); min-inline-size: var(--wb-sizing-size_160); background-color: var(--wb-semanticColor-core-foreground-neutral-default); mask-image: url(caret-down-bold.svg);"
            />
          </button>
        </div>
      </div>
    </span>
     
    <span
      style="white-space: nowrap;"
    >
      <span />
      <span
        class="mock-TeX"
      >
        60
      </span>
      <span />
    </span>
    .
  </div>
</div>
`;

exports[`renderer snapshots initial render: initial render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    The total number of boxes the forklift can carry is 
    <span
      class="perseus-widget-container widget-inline-block"
    >
      <div
        style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px;"
      >
        <label
          for=":r0:"
          style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-bold); line-height: var(--wb-font-body-lineHeight-medium);"
        >
          Test visible label
        </label>
        <div
          class="perseus-dropdown"
          style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; width: fit-content; max-inline-size: 100%;"
        >
          <button
            aria-controls=":r1:"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-label="Test ARIA label"
            aria-required="false"
            data-style-active="box-shadow: 0 0 0 var(--wb-border-width-thin) var(--wb-semanticColor-input-default-border);"
            data-style-focus="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
            data-style-focus-active="box-shadow: 0 0 0 var(--wb-border-width-thin) var(--wb-semanticColor-input-default-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner);"
            data-style-moz-focus-inner="border: 0px;"
            id=":r0:"
            role="combobox"
            style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: space-between; color: var(--wb-semanticColor-input-default-foreground); height: 40px; padding-inline-start: var(--wb-c-dropdown-opener-layout-padding-inlineStart); padding-inline-end: var(--wb-c-dropdown-opener-layout-padding-inlineEnd); border-width: 0px; border-radius: var(--wb-c-dropdown-opener-border-radius-rest); border-style: solid; outline: none; text-decoration: none; box-sizing: border-box; white-space: nowrap; touch-action: manipulation; background: var(--wb-semanticColor-input-default-background); border: var(--wb-border-width-thin) solid var(--wb-semanticColor-input-default-border); cursor: pointer;"
            type="button"
          >
            <span
              style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-font-weight-medium); line-height: var(--wb-font-body-lineHeight-medium); margin-inline-end: var(--wb-sizing-size_080); white-space: nowrap; user-select: none; overflow: hidden; text-overflow: ellipsis;"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                greater
                /less than or equal to
              </div>
            </span>
            <span
              aria-hidden="true"
              style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-sizing-size_160); height: var(--wb-sizing-size_160); min-inline-size: var(--wb-sizing-size_160); background-color: var(--wb-semanticColor-core-foreground-neutral-default); mask-image: url(caret-down-bold.svg);"
            />
          </button>
        </div>
      </div>
    </span>
     
    <span
      style="white-space: nowrap;"
    >
      <span />
      <span
        class="mock-TeX"
      >
        60
      </span>
      <span />
    </span>
    .
  </div>
</div>
`;

exports[`renderer snapshots renders a placeholder for a deprecated widget: deprecated widget 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="perseus-widget-container widget-block"
    >
      <div
        style="padding-block-start: 8px; padding-block-end: 8px;"
      >
        <div
          role="status"
          style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: var(--wb-sizing-size_160); position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; border-inline-start-width: var(--wb-c-banner-root-border-width-inlineStart); border-inline-end-width: var(--wb-c-banner-root-border-width-inlineEnd); border-block-start-width: var(--wb-c-banner-root-border-width-blockStart); border-block-end-width: var(--wb-c-banner-root-border-width-blockEnd); width: 100%; border-radius: var(--wb-c-banner-root-border-radius); overflow: hidden; padding-inline-start: var(--wb-c-banner-root-layout-paddingInlineStart); background-color: var(--wb-semanticColor-feedback-info-subtle-background); border-color: var(--wb-c-banner-root-color-border-info); color: var(--wb-semanticColor-feedback-info-subtle-text);"
        >
          <div
            style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: row; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; gap: var(--wb-c-banner-root-layout-gap);"
          >
            <span
              aria-label="info"
              data-testid="banner-kind-icon"
              role="img"
              style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: var(--wb-c-banner-icon-sizing-width); height: var(--wb-c-banner-icon-sizing-height); align-self: flex-start; color: var(--wb-c-banner-icon-color-info); background-color: currentColor; mask-image: url(info-bold.svg);"
            />
            <div
              style="align-items: center; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: row; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; flex: 1; align-content: center; flex-wrap: wrap; justify-content: space-between; gap: var(--wb-c-banner-root-layout-gap);"
            >
              <div
                style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-block-size: 0px; min-inline-size: 0px; flex-shrink: 1; text-align: start; overflow-wrap: break-word;"
              >
                <div
                  style="font-size: var(--wb-c-banner-label-font-size); font-weight: var(--wb-font-weight-semi); line-height: var(--wb-font-body-lineHeight-small); font-family: var(--wb-font-family-sans);"
                >
                  Sorry, this part of the question is no longer available. 😅 Don't worry, you won't be graded on this part. Keep going!
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
